# elmos

./: .gitignore  .sdkmanrc  AGENTS.md  Makefile  Makefile.batch29  Makefile.batch30  Makefile.batch31  Makefile.batch32  Makefile.batch33  Makefile.batch34  Makefile.batch35  Makefile.batch36  Makefile.batch37  Makefile.batch38  Makefile.batch39  Makefile.batch40  Makefile.batch41  Makefile.batch42  Makefile.batch43  Makefile.batch44  Makefile.batch45  README.md  pom.xml  vercel.json
.github/: dependabot.yml
engines/project-synthesis-engine/: .gitignore  README.md  pyproject.toml
engines/project-synthesis-engine/scripts/: run_acceptance.py
engines/project-synthesis-engine/src/elmos_project_synthesis/: __init__.py  cli.py  dotnet_target.py  intake.py  java_target.py  models.py  python_target.py  rendering.py  verification.py  workspace.py
engines/project-synthesis-engine/tests/: test_synthesis.py
engines/python-engine/: Dockerfile  README.md  pyproject.toml
engines/python-engine/compatibility-registry/: python-compatibility-v1.json
engines/python-engine/src/elmos_python/: __init__.py  codemod.py  contracts.py  discovery.py  domain.py  engine.py  environment.py  evidence.py  legacy.py  ml.py  packaging.py  pipeline.py  planning.py  runners.py  semantic.py  validation.py  web.py
engines/python-engine/src/elmos_python/worker/: __init__.py  main.py
engines/python-engine/test-fixtures/: batch12-acceptance-scenarios.json  fixture-matrix.json
engines/python-engine/test-fixtures/scenarios/django-legacy/: settings.py  urls.py
engines/python-engine/test-fixtures/scenarios/flask-context/: app.py
engines/python-engine/test-fixtures/scenarios/ml-artifact/: model.joblib
engines/python-engine/tests/: test_batch12.py  test_worker_api.py
engines/python-engine/validation-profiles/: path-validation-v1.json
(+15087 files in other folders)
