[project]
name = "elmos-project-synthesis"
version = "1.0.0"
description = "Evidence-bounded ELMOS project synthesis engine"
requires-python = ">=3.12,<3.15"
dependencies = []

[project.scripts]
elmos-project-synthesis = "elmos_project_synthesis.cli:main"

[dependency-groups]
dev = [
  "mypy==1.17.0",
  "pyyaml==6.0.2",
  "pytest==8.4.1",
  "ruff==0.15.22",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elmos_project_synthesis"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["elmos_project_synthesis"]
