[project]
name = "elmos-python-engine"
version = "1.0.0"
description = "ELMOS Python legacy modernization engine"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.116,<1",
  "libcst>=1.8,<2",
  "pydantic>=2.11,<3",
  "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elmos_python"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["elmos_python"]

